--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
+Heroku link: http://intense-ridge-3945.herokuapp.com/
+
 == README
 
 This README would normally document whatever steps are necessary to get the
