--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,15 @@
 Heroku link: http://intense-ridge-3945.herokuapp.com/
 
+***********************HW2**************************************
+added image, 4 different inputs, link to my github repo.
+
+What I did:
+used divs to position the containers properly, applied styles to divs, that's it
+
+Issues: 
+no issues
+****************************************************************
+
 == README
 
 This README would normally document whatever steps are necessary to get the
